lib/tests/fixtures/compiler/evaluation/func_call_in_type_spec.baseline
Error: func_call_in_type_spec.pp:1:24: node 'test': function call expressions cannot be used in type specifications.
  type Invalid = Integer[foo()]
                         ^~~~~
